
CHANGES IN `modeltools' VERSION 0.2-12

  o fix Rd problems

CHANGES IN `modeltools' VERSION 0.2-11

  o added argument newdata to generic cluster()

  o LazyLoad: yes

CHANGES IN `modeltools' VERSION 0.2-10

  o Added several generic functions: ICL, KLdiv, cluster, getModel, parameters,
    posterior, prior, refit, info, infoCheck

  o fix problems with evaluating subset arguments

CHANGES IN `modeltools' VERSION 0.2-9

  o the following code didn't work

    tmp <- function(formula, data = list(), subset = NULL) 
        ModelEnvFormula(formula, data, subset = subset, frame = parent.frame())
    foo <- function(x, y, ...) tmp(y ~ x, ...)
    a <- 1:10     
    b <- 1:10     
    stopifnot(identical(foo(a, b, subset = 1:5)@get("response")[[1]],1:5)) 
    ### was: couldn't find `y' when `frame' wasn't specified

    x <- 1
    y <- 2   
    stopifnot(identical(foo(a, b, subset = 1:5)@get("response")[[1]],1:5))   
    ### was: found `x' and `y' in .GlobalEnv when `frame' wasn't specified


CHANGES IN `modeltools' VERSION 0.2-8

  o ModelEnvFormula(y ~ 1) works now

  o new function MEapply (only roughly documented, more to come)

CHANGES IN `modeltools' VERSION 0.2-7

  o add methods and stats to Depends:

CHANGES IN `modeltools' VERSION 0.2-6

  o fix codetools problems

CHANGES IN `modeltools' VERSION 0.2-5

  o import(stats)

CHANGES IN `modeltools' VERSION 0.2-4

  o add survReg objects as an interface to survival::survreg

CHANGES IN `modeltools' VERSION 0.2-3

  o checkData does no longer insist that columns of a new data frame
    are in the same order as in the original data frame.

  o fxied a bug in the show() method for ModelEnv objects

  o new ModelEnv creator function ModelEnvMatrix

  o `linearModel@fit' now returns an object of class `linearModel'
  
  o `glinearModel' object added
  
  o S3 methods for (g)linearModel objects added (fitted, model.matrix, ...)
  

CHANGES IN `modeltools' VERSION 0.2-2

