@@ -1,7 +1,7 @@
 Package: modeltools
 Title: Tools and Classes for Statistical Models
-Date: $Date: 2007-04-24 17:11:43 +0200 (Tue, 24 Apr 2007) $
-Version: 0.2-12
+Date: $Date: 2007-09-07 11:51:52 +0200 (Fri, 07 Sep 2007) $
+Version: 0.2-13
 Author: Torsten Hothorn, Friedrich Leisch, Achim Zeileis 
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Description: A collection of tools to deal with statistical models. 
@@ -13,5 +13,5 @@ Description: A collection of tools to deal with statistical models.
 Depends: stats, stats4
 Imports: methods
 LazyLoad: yes
-License: GPL
-Packaged: Mon May  7 13:10:21 2007; hothorn
+License: GPL-2
+Packaged: Tue Sep 11 14:23:48 2007; leisch
