@@ -1,6 +1,7 @@
 \name{Generics}
 \alias{ICL}
 \alias{KLdiv}
+\alias{Lapply}
 \alias{cluster}
 \alias{getModel}
 \alias{parameters}
@@ -15,15 +16,17 @@
 \usage{
 ICL(object, \dots)
 KLdiv(object, \dots)
+Lapply(object, FUN, \dots)
 cluster(object, newdata, \dots)
 getModel(object, \dots)
 parameters(object, \dots)
 posterior(object, newdata, \dots)
 prior(object, \dots)
-refit(object, \dots)
+refit(object, newdata, \dots)
 }
 \arguments{
   \item{object}{S4 classed object.}
+  \item{FUN}{The function to be applied.}
   \item{newdata}{Optional new data.}
   \item{\dots}{Some methods for these generic function may take
     additional, optional arguments.}
@@ -33,6 +36,7 @@ refit(object, \dots)
     \item{ICL:}{Integrated Completed Likelihood criterion for model
       selection.}
     \item{KLdiv:}{Kullback-Leibler divergence.}
+    \item{Lapply:}{S4 generic for \code{lapply}}
     \item{cluster:}{Get cluster membership information from a model or
       compute it for new data.}
     \item{getModel:}{Get single model from a collection of models.}
