@@ -1,3 +1,7 @@
+CHANGES IN `modeltools' VERSION 0.2-13
+
+  o new generic Lapply
+
 
 CHANGES IN `modeltools' VERSION 0.2-12
 
